--- a/mmai/config/mmai-settings.json
+++ b/mmai/config/mmai-settings.json
@@ -5,12 +5,10 @@
     "  1.0 = baseline",
     "  2.0 = uncertain",
     "  2.5 = dumb",
-    "  3+ = garbage (too random)",
-    "NOTE: The `temperature` feature is still a work-in-progress and is",
-    "      not yet configurable (changing the value here has no effect)."
+    "  3+ = garbage (too random)"
   ],
   "models": {},
   "fallback": "BattleAI",
-  "temperature": 0,
+  "temperature": 0.5,
   "seed": 0
 }
